Be much more aggressive about using the symbols coming from the other libraries split out from the old libkutils.

Otherwise for some reason some new linker manage to avoid depending on
libkcmutils and friends. You just gotta love when linker behavior change
behind your back. ;-)

BUG: 240120


svn path=/trunk/KDE/kdelibs/; revision=1132757